--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
         
             <div id="my-product-context-menu" class="absolute bg-slate-700 border border-slate-600 rounded-md shadow-lg py-1 text-sm text-white z-50 hidden">
                 <button class="context-menu-item" id="context-goto-product">Go to Product Page</button>
-                <button class="context-menu-item" id="context-view-order-id">View Order ID</button> {/* <-- ADD THIS */}
+                <button class="context-menu-item" id="context-view-order-id">View Order ID</button>
                 <button class="context-menu-item delete" id="context-unregister-my-product">Unregister Product</button>
             </div>
             
