--- a/index.html
+++ b/index.html
@@ -901,73 +901,98 @@
         }
 
 
-        // --- Modify displayRegisteredProducts ---
-        function displayRegisteredProducts(productsToDisplay) {
-            // ... (existing code for container, error/empty checks) ...
+                /**
+         * Displays the user's registered products in the dashboard.
+         * @param {Array<object>|null} productsToDisplay - Array of product objects including registration details (like order_id), or null on error.
+         */
+         function displayRegisteredProducts(productsToDisplay) {
+            // --- Define the 'container' variable by getting the element ---
+            const container = document.getElementById('dashboard-my-products-list');
+            // --- End Definition ---
 
+            // Check if the container element was actually found in the HTML
+            if (!container) {
+                console.error("Error: Could not find element with ID 'dashboard-my-products-list'");
+                return; // Exit if container doesn't exist
+            }
+
+            // Clear previous content (like loading message)
+            container.innerHTML = '';
+
+            // Handle error case or empty list
+            if (productsToDisplay === null) {
+                 // Uses 'container' - OK
+                 container.innerHTML = '<p class="text-red-400 text-sm">Could not load product details.</p>';
+                 return;
+            }
+            if (productsToDisplay.length === 0) {
+                // Uses 'container' - OK
+                container.innerHTML = '<p class="text-gray-400 text-sm">You have not registered any products yet.</p>';
+                return;
+            }
+
+            // Display each product
             productsToDisplay.forEach(product => {
+                // 'container' is accessible within this loop
+
                 const productElement = document.createElement('div');
-                // Added 'relative' for button positioning
                 productElement.className = 'p-2 pr-4 bg-slate-700/50 rounded-md text-sm flex items-center space-x-2 hover:bg-slate-600/50 transition-colors relative';
                 productElement.dataset.productId = product._id;
                 productElement.dataset.productName = product.product_name || product.name || 'Unnamed Product';
                 productElement.dataset.orderId = product.order_id || '';
-                // --- Store tags and device type (assuming they exist on product object) ---
-                const tags = product.tags || []; // Assuming tags is an array
-                const deviceType = product.device_type || ''; // Assuming device_type exists
-                productElement.dataset.tags = JSON.stringify(tags); // Store tags as JSON string
+                const tags = product.tags || [];
+                const deviceType = product.device_type || '';
+                productElement.dataset.tags = JSON.stringify(tags);
                 productElement.dataset.deviceType = deviceType;
-                // --- End Store ---
 
-                let thumbnailHtml = ''; // (Thumbnail logic remains the same)
-                // ...
+                let thumbnailHtml = '';
+                if (product.thumbnailUrl) {
+                   thumbnailHtml = `<img src="${product.thumbnailUrl}" alt="${productElement.dataset.productName}" class="w-8 h-8 rounded object-cover flex-shrink-0 pointer-events-none" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                                    <div class="w-8 h-8 rounded bg-slate-600 flex-shrink-0 items-center justify-center text-xs text-gray-400 pointer-events-none" style="display: none;">N/A</div>`;
+                } else {
+                    thumbnailHtml = '<div class="w-8 h-8 rounded bg-slate-600 flex-shrink-0 flex items-center justify-center text-xs text-gray-400 pointer-events-none">N/A</div>';
+                }
 
-                // Check if firmware product
-                const isFirmware = tags.some(tag => tag.trim().toUpperCase() === 'FIRMWARE');
+                const isFirmware = tags.some(tag => String(tag).trim().toUpperCase() === 'FIRMWARE'); // Ensure tag is string
 
-                // --- Add Generate Button conditionally ---
                 let generateButtonHtml = '';
                 if (isFirmware) {
-                    // Position button absolutely to the right
                     generateButtonHtml = `
                         <button class="generate-fw-button absolute top-1/2 right-2 transform -translate-y-1/2 bg-orange-600 hover:bg-orange-700 text-white text-xs font-semibold py-1 px-2 rounded"
                                 title="Generate Firmware">
                             Generate
                         </button>`;
                 }
-                // --- End Add ---
 
                 productElement.innerHTML = `
-                    <div class="flex items-center space-x-2 flex-grow"> ${/* Wrap existing content */''}
+                    <div class="flex items-center space-x-2 flex-grow">
                         ${thumbnailHtml}
                         <span class="text-white font-medium pointer-events-none">${productElement.dataset.productName}</span>
                     </div>
-                    ${generateButtonHtml} ${/* Insert the button */''}
+                    ${generateButtonHtml}
                     `;
 
                  productElement.style.cursor = 'pointer';
-                 // Click listener for navigation (exclude button clicks)
                  productElement.addEventListener('click', (e) => {
-                     if (!e.target.closest('.generate-fw-button') && e.button !== 2) { // Don't navigate if clicking button or right-clicking
+                     if (!e.target.closest('.generate-fw-button') && e.button !== 2) {
                          window.location.hash = `/#productDetail?id=${product._id}`;
                      }
                  });
-                 // Context Menu Listener (already there)
                  productElement.addEventListener('contextmenu', showMyProductContextMenu);
 
-                 // --- Add listener for the inline button ---
                  const genButton = productElement.querySelector('.generate-fw-button');
                  if (genButton) {
                      genButton.addEventListener('click', (e) => {
-                         e.stopPropagation(); // Prevent card navigation
+                         e.stopPropagation();
                          promptAndStartFirmwareGeneration(product._id, productElement.dataset.productName, productElement.dataset.deviceType);
                      });
                  }
-                 // --- End Add ---
 
+                // --- Uses 'container' here - This should be OK ---
                 container.appendChild(productElement);
             });
         }
+
 
         // --- Add button to #my-product-context-menu HTML ---
         /*
